# ertms_parser

./: .gitignore  CMakeLists.txt  Makefile  README.md  Subset026.xsd  Subset039.xsd  conanfile.txt  justfile  saveGB.cpp  todo
config/: CMakeLists.txt  config.hpp.in
docs/: varlist
include/: bit_buffers.hpp  message_buffer.hpp  packets_def.hpp  utils.hpp  vars_def.hpp  vars_enum.hpp
include/bit_buffers/: bit_buffers.hpp
src/: main.cpp  sandbox.cpp  utils.cpp
test/: test_main.cpp
test/bit_buffers/: bit_buffers_test.cpp
